[package]
name = "dcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
docker-api = "0.9.1"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
tar = "0.4"
predicates = "2.1.1"
assert_cmd = "2.0.4"
rand = "0.8.5"
