[package]
name = "dcp"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
docker-api = "0.9.1"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
tar = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
podman-api = "0.4"
xdg = "^2.1"

[dev-dependencies]
predicates = "2.1.1"
assert_cmd = "2.0.4"
rand = "0.8.5"
